--- a/wp-content/themes/bpo/html/index.html
+++ b/wp-content/themes/bpo/html/index.html
@@ -14,25 +14,77 @@
 					<div class="intro__info">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam laoreet velit turpis.</div>
 				</div>
 				<div class="previews">
-					<div class="previews__item previews__item--short">
-						<a href='#' class="previews__item-img" tabindex="0">
-							<img src="img/uploads/Image1.jpg" alt="" width="" height="">
-						</a>
-						<div class="previews__item-subtitle">Specialist team</div>
-						<h2 class="previews__item-title">
-							<a href="#">Customer Experience</a>
-						</h2>
+					<div class="preview-row preview-row--type-1">
+						<div class="preview-row__item">
+							<a href='#' class="preview-row__item-img" tabindex="0">
+								<img src="img/uploads/Image1.jpg" alt="" width="" height="">
+							</a>
+							<div class="preview-row__item-subtitle">Specialist team</div>
+							<h2 class="preview-row__item-title">
+								<a href="#">Customer Experience</a>
+							</h2>
+						</div>
+						<div class="preview-row__item">
+							<a href='#' class="preview-row__item-img" tabindex="0">
+								<img src="img/uploads/Image2.jpg" alt="" width="" height="">
+							</a>
+							<div class="preview-row__item-subtitle">Specialist team</div>
+							<h2 class="preview-row__item-title">
+								<a href="#">Back Office</a>
+							</h2>
+						</div>
 					</div>
-					<div class="previews__item previews__item--whide">
-						<a href='#' class="previews__item-img" tabindex="0">
-							<img src="img/uploads/Image2.jpg" alt="" width="" height="">
-						</a>
-						<div class="previews__item-subtitle">Specialist team</div>
-						<h2 class="previews__item-title">
-							<a href="#">Back Office</a>
-						</h2>
+					<div class="preview-row preview-row--type-2">
+						<div class="preview-row__item">
+							<a href='#' class="preview-row__item-img" tabindex="0">
+								<img src="img/uploads/Image1.jpg" alt="" width="" height="">
+							</a>
+							<div class="preview-row__item-subtitle">Specialist team</div>
+							<h2 class="preview-row__item-title">
+								<a href="#">Accounting</a>
+							</h2>
+						</div>
+						<div class="preview-row__item">
+							<a href='#' class="preview-row__item-img" tabindex="0">
+								<img src="img/uploads/Image1.jpg" alt="" width="" height="">
+							</a>
+							<div class="preview-row__item-subtitle">Specialist team</div>
+							<h2 class="preview-row__item-title">
+								<a href="#">HR</a>
+							</h2>
+						</div>
+						<div class="preview-row__item">
+							<a href='#' class="preview-row__item-img" tabindex="0">
+								<img src="img/uploads/Image1.jpg" alt="" width="" height="">
+							</a>
+							<div class="preview-row__item-subtitle">Specialist team</div>
+							<h2 class="preview-row__item-title">
+								<a href="#">Marketing</a>
+							</h2>
+						</div>
+					</div>
+					<div class="preview-row preview-row--type-3">
+						<div class="preview-row__item">
+							<a href='#' class="preview-row__item-img" tabindex="0">
+								<img src="img/uploads/Image2.jpg" alt="" width="" height="">
+							</a>
+							<div class="preview-row__item-subtitle">Specialist team</div>
+							<h2 class="preview-row__item-title">
+								<a href="#">Business Development</a>
+							</h2>
+						</div>
+						<div class="preview-row__item">
+							<a href='#' class="preview-row__item-img" tabindex="0">
+								<img src="img/uploads/Image1.jpg" alt="" width="" height="">
+							</a>
+							<div class="preview-row__item-subtitle">Specialist team</div>
+							<h2 class="preview-row__item-title">
+								<a href="#">Legal</a>
+							</h2>
+						</div>
 					</div>
 				</div>
+
 			</div>
 		</div>
 	</main>
